--- a/myapp/client/public/index.html
+++ b/myapp/client/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>New York Times</title>
-  </head>
+  </head>c
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
